--- a/index.html
+++ b/index.html
@@ -1,9 +1,60 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="es_ES">
+
 <head>
+	<meta charset="UTF-8">
 	<title>Competi</title>
+    <!-- <link type="image/png" href="imatges/favicon.png"/> Canviar per lgotio empresa-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
+	<header>
+		<div id="div1">
+			<div>
+			<img id="logo" src="imagenes/logo.jpg" title="Fusteria Quim Ferrer">
+			</div>
+			<div id="idioma">
+				<button type="button" class="btn btn-primary idioma">Català</button>
+				<button type="button" class="btn btn-primary idioma">Castellano</button>
+			</div>
+			
+		</div>
+		
+	</header>
+
+	<nav class="navbar navbar-dark bg-dark";">
+		<button type="button" class="btn btn-primary nav-btn-selected" href="#">Fusteria</button>
+		<button type="button" class="btn btn-primary nav-btn" href="#">Galeria</button>
+		<button type="button" class="btn btn-primary nav-btn" href="#">Contacte</button>
+		<button type="button" class="btn btn-primary nav-btn" href="#">Sobre Nosaltres</button>
+	</nav>
+
+	<section>
+		<img id="taller1" src="imagenes/taller1.jpg" title="Taller">
+		<div id="text">
+			<div>
+			<h1>Benvinguts</h1>
+			<p class="txt">Fusters des de 1980</p>
+			<br>
+			</div>
+			
+			<p class="txt">Fusteria Quim Ferrer és una empresa que des de 1996, es dedica a fabricar, comercialitzar i col·locar elements de fusteria per a construcció i interiorisme. </p>
+
+			<div></div>
+		</div>
+	</section>
+
+	<footer>
+		<p align="center">Copyright © 2018 Fèlix Ferrer. Tots els drets reservats.</p>
+	</footer>
 
 </body>
+
 </html>
